# cohortintgrad

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: cohortintgrad.insertion_deletion.rst  cohortintgrad.rst  conf.py
docs/html/: .buildinfo  cohortintgrad.html  cohortintgrad.insertion_deletion.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/.doctrees/: cohortintgrad.doctree  cohortintgrad.insertion_deletion.doctree  environment.pickle  index.doctree
docs/html/_modules/: index.html
docs/html/_modules/cohortintgrad/: igcs.html
docs/html/_modules/cohortintgrad/insertion_deletion/: insertion_deletion.html  observational_insertion_deletion_wrapper.html
docs/html/_sources/: index.rst.txt
example/: California_Housing.ipynb
src/cohortintgrad/: __init__.py  igcs.py
src/cohortintgrad/insertion_deletion/: insertion_deletion.py  observational_insertion_deletion_wrapper.py
src/cohortshapleyintegratedgradients/: igcs.py
src/cohortshapleyintegratedgradients.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_igcs_toy.py  test_insertion_deletion.py
